# data-cleaning-env

./: Antigravity.lnk  Cursor.lnk  Deepak Reddy - Chrome.lnk  Dockerfile  GitHub Desktop.lnk  Microsoft Edge.lnk  README.md  RUN_ME.bat  Visual Studio Code.lnk  chatgpt.txt  fix_and_deploy.bat  inference.py  openenv.yaml  push_to_github.py  pyproject.toml  requirements.txt  results.json  run_hard.bat  run_inference.bat  run_medium.bat  test_full.py  test_standalone.py
CN/: CN_Previous_Year_Answers.docx  Computer_Networks_Exam_Prep.docx
data_cleaning_env/: __init__.py  client.py  models.py
data_cleaning_env.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
data_cleaning_env/server/: __init__.py  app.py  environment.py
data_cleaning_env/tasks/: __init__.py  task_definitions.py
server/: app.py
